about icon stretch fix

--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -34,6 +34,7 @@
         padding: 0 80px;
         display: flex;
         justify-content: center;
+        align-items: flex-start;
         width: 42%;
     }
 
@@ -172,9 +173,6 @@
         .section__text{
             font-size: 24px;
             line-height: 28px;
-            img{
-                min-width: none;
-            }
         }
 
         .section__image-block{
